update some tests